Developed the footer and added styling for that, added script for the current year for copyright text

--- a/index.html
+++ b/index.html
@@ -719,7 +719,11 @@
       <section id="contact" class="contact-section-wrap">
         <div class="contact-section">
           <div class="contact-cta-inner-wrap container">
-            <a data-aos="zoom-in" href="mailto:aakash.sisodiya2709@gmail.com" class="contact-cta-btn">
+            <a
+              data-aos="zoom-in"
+              href="mailto:aakash.sisodiya2709@gmail.com"
+              class="contact-cta-btn"
+            >
               <span class="cta-text">Contact DG</span>
               <img
                 class="icon"
@@ -737,40 +741,88 @@
         <div class="image-slider-section">
           <div class="image-slider-inner-wrap">
             <div class="img-slider-itm">
-              <img class="slider-img" src="./assets/media/portfolio/masonary/gallery-itm-1.jpg" alt="">
+              <img
+                class="slider-img"
+                src="./assets/media/portfolio/masonary/gallery-itm-1.jpg"
+                alt=""
+              />
             </div>
             <div class="img-slider-itm">
-              <img class="slider-img" src="./assets/media/portfolio/masonary/gallery-itm-2.jpg" alt="">
+              <img
+                class="slider-img"
+                src="./assets/media/portfolio/masonary/gallery-itm-2.jpg"
+                alt=""
+              />
             </div>
             <div class="img-slider-itm">
-              <img class="slider-img" src="./assets/media/portfolio/masonary/gallery-itm-3.jpg" alt="">
+              <img
+                class="slider-img"
+                src="./assets/media/portfolio/masonary/gallery-itm-3.jpg"
+                alt=""
+              />
             </div>
             <div class="img-slider-itm">
-              <img class="slider-img" src="./assets/media/portfolio/masonary/gallery-itm-4.jpg" alt="">
+              <img
+                class="slider-img"
+                src="./assets/media/portfolio/masonary/gallery-itm-4.jpg"
+                alt=""
+              />
             </div>
             <div class="img-slider-itm">
-              <img class="slider-img" src="./assets/media/portfolio/masonary/gallery-itm-5.jpg" alt="">
+              <img
+                class="slider-img"
+                src="./assets/media/portfolio/masonary/gallery-itm-5.jpg"
+                alt=""
+              />
             </div>
             <div class="img-slider-itm">
-              <img class="slider-img" src="./assets/media/portfolio/masonary/gallery-itm-6.jpg" alt="">
+              <img
+                class="slider-img"
+                src="./assets/media/portfolio/masonary/gallery-itm-6.jpg"
+                alt=""
+              />
             </div>
             <div class="img-slider-itm">
-              <img class="slider-img" src="./assets/media/portfolio/masonary/gallery-itm-7.jpg" alt="">
+              <img
+                class="slider-img"
+                src="./assets/media/portfolio/masonary/gallery-itm-7.jpg"
+                alt=""
+              />
             </div>
             <div class="img-slider-itm">
-              <img class="slider-img" src="./assets/media/portfolio/masonary/gallery-itm-8.jpg" alt="">
+              <img
+                class="slider-img"
+                src="./assets/media/portfolio/masonary/gallery-itm-8.jpg"
+                alt=""
+              />
             </div>
             <div class="img-slider-itm">
-              <img class="slider-img" src="./assets/media/portfolio/masonary/gallery-itm-9.jpg" alt="">
+              <img
+                class="slider-img"
+                src="./assets/media/portfolio/masonary/gallery-itm-9.jpg"
+                alt=""
+              />
             </div>
             <div class="img-slider-itm">
-              <img class="slider-img" src="./assets/media/portfolio/masonary/gallery-itm-10.jpg" alt="">
+              <img
+                class="slider-img"
+                src="./assets/media/portfolio/masonary/gallery-itm-10.jpg"
+                alt=""
+              />
             </div>
             <div class="img-slider-itm">
-              <img class="slider-img" src="./assets/media/portfolio/masonary/gallery-itm-11.jpg" alt="">
+              <img
+                class="slider-img"
+                src="./assets/media/portfolio/masonary/gallery-itm-11.jpg"
+                alt=""
+              />
             </div>
             <div class="img-slider-itm">
-              <img class="slider-img" src="./assets/media/portfolio/masonary/gallery-itm-12.jpg" alt="">
+              <img
+                class="slider-img"
+                src="./assets/media/portfolio/masonary/gallery-itm-12.jpg"
+                alt=""
+              />
             </div>
           </div>
         </div>
@@ -780,8 +832,152 @@
 
     <!-- Footer -->
     <footer id="footer" class="footer">
-      <!-- I'll add Footer here -->
+      <div class="footer-inner-wrap container">
+        <div class="media-area">
+          <figure class="footer-image-wrapper">
+            <img
+              src="./assets/media/rounded.jpg"
+              alt="Footer Image"
+              class="footer-img"
+            />
+          </figure>
+        </div>
+
+        <div class="content-area">
+          <div class="menu-section">
+            <h6 data-aos="fade-right" class="menu-heading">Menu</h6>
+
+            <ul class="footer-menu-list">
+              <li
+                data-aos="fade-left"
+                data-aos-duration="500"
+                class="footer-menu-itm"
+              >
+                <a target="about" href="#about" class="menu-link">About</a>
+              </li>
+              <li
+                data-aos="fade-left"
+                data-aos-duration="1000"
+                class="footer-menu-itm"
+              >
+                <a target="portfolio" href="#portfolio" class="menu-link"
+                  >Portfolio</a
+                >
+              </li>
+              <li
+                data-aos="fade-left"
+                data-aos-duration="1500"
+                class="footer-menu-itm"
+              >
+                <a target="testimonial" href="#testimonial" class="menu-link"
+                  >Testimonial</a
+                >
+              </li>
+              <li
+                data-aos="fade-left"
+                data-aos-duration="2000"
+                class="footer-menu-itm"
+              >
+                <a target="contact" href="#contact" class="menu-link"
+                  >Contact</a
+                >
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer-contact-section">
+            <div class="physical-contact-details">
+              <p class="address-text dg-secondary-text">
+                B 7/4, Basement, Vasant Vihar<br> New Delhi, 110057.
+              </p>
+            </div>
+
+            <div class="digital-contact-details dg-secondary-text">
+              <ul class="contact-list">
+                <li class="contact-itm">
+                  <a href="tel:+919898847327" class="contact-link">
+                    <span>+91 98988 47327</span>
+
+                    <img
+                      src="./assets/media/icons/phone.svg"
+                      alt="Phone"
+                      class="icon"
+                    />
+                  </a>
+                </li>
+                <li class="contact-itm">
+                  <a href="mailto:aakash.sisodiya2709@gmail.com" class="contact-link">
+                    <span>aakash.sisodiya2709@gmail.com</span>
+
+                    <img
+                      src="./assets/media/icons/email.svg"
+                      alt="Email"
+                      class="icon"
+                    />
+                  </a>
+                </li>
+              </ul>
+
+              <ul class="social-link-list">
+                <li class="social-itm">
+                  <a
+                    href="https://www.instagram.com/aakash.s27/"
+                    class="social-link"
+                  >
+                    <img
+                      class="social-icon"
+                      src="./assets/media/icons/instagram.svg"
+                      alt="Instagram"
+                    />
+                  </a>
+                </li>
+                <li class="social-itm">
+                  <a
+                    href="https://www.linkedin.com/in/aakash-sisodiya/"
+                    class="social-link"
+                  >
+                    <img
+                      class="social-icon"
+                      src="./assets/media/icons/linkedin.svg"
+                      alt="LinkedIn"
+                    />
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="copyright-section">
+            <p class="copyright-text">
+              &copy; <span id="current-year"></span> DG Photography
+            </p>
+
+            <ul class="copyright-menu-list">
+              <li class="copyright-menu-itm">
+                <a href="#privacy-policy" class="menu-link">Privacy Policy</a>
+              </li>
+              <li class="copyright-menu-itm">
+                <a href="#cookie-policy" class="menu-link">Cookie Policy</a>
+              </li>
+            </ul>
+
+            <p>
+              <a
+                href="https://www.figma.com/file/9cRSHGsoJYd0yw5Pm6G3O6/Dinesh-Gahlot?type=design&node-id=0%3A1&mode=design&t=H5g0bql7cUxhii47-1"
+                >Design</a
+              >
+            </p>
+            <p>
+              <a
+                href="https://github.com/SisodiyaAakash/dg-photography/"
+                >Code</a
+              >
+            </p>
+          </div>
+        </div>
+      </div>
     </footer>
+    <!-- Footer ends here -->
 
     <!-- jQuery from the assets  -->
     <script src="./assets/script/jquery.min.js"></script>
