Added script to change the footer menu item corresponding image

--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@
         <div class="media-area">
           <figure class="footer-image-wrapper">
             <img
-              src="./assets/media/rounded.jpg"
+              src="./assets/media/footer/footer-default.jpg"
               alt="Footer Image"
               class="footer-img"
             />
