Added slider in the hero section as well

--- a/index.html
+++ b/index.html
@@ -172,16 +172,39 @@
 
     <main class="main-content">
       <!-- Hero Section -->
-      <!-- Note for Nitish: Because here are several sliders in the page, I'm adding parallax effect in the hero section instead of the slider -->
-      <section id="hero-section" class="hero-section-wrap">
+      <section id="hero" class="hero-section-wrap">
         <div
-          class="hero-section"
-          style="background-image: url('./assets/media/home-hero.jpg')"
+          class="hero-section hero-slide-1"
+          style="background-image: url('./assets/media/hero/home-hero-1.jpg')"
         >
           <div class="overlay-wrapper">
             <div class="container">
               <div class="hero-content">
                 <h1>Capturing Moments,<br />Creating Memories</h1>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="hero-section hero-slide-2"
+          style="background-image: url('./assets/media/hero/home-hero-2.jpg')"
+        >
+          <div class="overlay-wrapper">
+            <div class="container">
+              <div class="hero-content">
+                <h1>Perfection with<br />Cutting-Edge Technology</h1>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="hero-section hero-slide-3"
+          style="background-image: url('./assets/media/hero/home-hero-3.jpg')"
+        >
+          <div class="overlay-wrapper">
+            <div class="container">
+              <div class="hero-content">
+                <h1>Treasure the<br>festival memories.</h1>
               </div>
             </div>
           </div>
@@ -610,6 +633,7 @@
       <!-- Rounded Banner Section ends here -->
 
       <!-- Testimonial Section -->
+      <!-- Note for Nitish: I've developed this portion a bit different than the instruction as it was not fit as per my view in this overall UI -->
       <section id="testimonial" class="testimonial-section-wrap">
         <div
           class="testimonial-section"
@@ -888,7 +912,8 @@
           <div class="footer-contact-section">
             <div class="physical-contact-details">
               <p class="address-text dg-secondary-text">
-                B 7/4, Basement, Vasant Vihar<br> New Delhi, 110057.
+                B 7/4, Basement, Vasant Vihar<br />
+                New Delhi, 110057.
               </p>
             </div>
 
@@ -906,7 +931,10 @@
                   </a>
                 </li>
                 <li class="contact-itm">
-                  <a href="mailto:aakash.sisodiya2709@gmail.com" class="contact-link">
+                  <a
+                    href="mailto:aakash.sisodiya2709@gmail.com"
+                    class="contact-link"
+                  >
                     <span>aakash.sisodiya2709@gmail.com</span>
 
                     <img
@@ -968,8 +996,7 @@
               >
             </p>
             <p>
-              <a
-                href="https://github.com/SisodiyaAakash/dg-photography/"
+              <a href="https://github.com/SisodiyaAakash/dg-photography/"
                 >Code</a
               >
             </p>
